[package]
name = "pipeviewer"
version = "0.1.0"
authors = ["fgrust <fgrust@github.com>"]
edition = "2021"
description = "Educational version of the pv utility"
homepage = "https://github.com/fgrust/pipeviewer"
repository = "https://github.com/fgrust/pipeviewer"
readme = "README.md"
keywords = ["educational", "pv"]
categories = ["command-line-utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossterm = "0.26.1"

[profile.dev]
split-debuginfo = "packed"
